CloudFormation/Wordpress-Monolithic.yaml
Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "Key Pair for EC2 instance"

  # Get Latest AMI ID In the region for Amazon Linux
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    Description: "AMI Used for the EC2 Instance"

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH And HTTP Traffic from any IP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: 'Allow SSH'
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: 'Allow HTTP'

  EC2:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      InstanceType: t2.micro
      ImageId: !Ref LatestAmiId
      SecurityGroupIds:
      - !Ref InstanceSecurityGroup
      Tags:
      - Key: Name 
        Value: Wordpress-Monolithic
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          export wordpress=/tmp/wordpress
          export apache=/var/www/html

          # Install required packages
          yum install -y mariadb-server httpd wget
          amazon-linux-extras install -y lamp-mariadb10.2-php7.2 php7.2

          # Enable and start apache and mariadb services
          systemctl enable --now mariadb httpd

          # Set mariadb root password
          mysqladmin -u root password admin

          # Wordpress installation
          mkdir -pv $wordpress
          wget https://wordpress.org/latest.tar.gz -P $wordpress
          tar -xzvf $wordpress/latest.tar.gz --strip-components=1 --directory /var/www/html
          rm -rf $wordpress

          # Create wordpress config file
          cp $apache/wp-config-sample.php $apache/wp-config.php

          # Modify config file
          sed -i 's/database_name_here/wordpress_db/g' $apache/wp-config.php
          sed -i 's/username_here/admin/g' $apache/wp-config.php
          sed -i 's/password_here/admin/g' $apache/wp-config.php

          # Change ownership of /var/www/html to apache user and group
          chown apache:apache -R $apache/

          # Setting up DB 
          cat << EOF > /tmp/db.txt
          CREATE DATABASE wordpress_db;
          CREATE USER 'admin'@'localhost' IDENTIFIED BY 'admin';
          GRANT ALL ON wordpress_db.* TO admin@localhost;
          FLUSH PRIVILEGES;
          EOF

          mysql -u root --password=admin < /tmp/db.txt
          rm -rf /tmp/db.txt
